# moralhazard

./: .coverage  .gitignore  LICENSE  README.md  main.py  main_np.py  math.tex  mkdocs.yml  pyproject.toml  run_tests.py
.github/workflows/: docs.yml
diagnostics/: cmp.py  compare_principal_solvers.py  compare_solvers_a20.py  compare_solvers_a30.py  core.py  core_functions.py  hard_case.py  minimum_cost.py  principal_problem.py  test_t.py  time.py
diagnostics/output/: core.txt
docs/: index.md  interface_doc.md  internals_doc.md  roadmap.md
docs/reference/: config_maker.md  problem.md  types.md
examples/: cm_convex.py  colab_demo.ipynb  distributions.py  iterative_solver.py  iterative_solver_demo.py  optimal_action.py  plots.py  quickstart.py  time.py  timing.py  vc.py
moral_hazard/: solver.py
moralhazard/: __init__.py  config_maker.py  core.py  grids.py  problem.py  solver.py  types.py  utils.py
src/moralhazard/: __init__.py  config_maker.py  core.py  grids.py  problem.py  solver.py  solver_cvxpy.py  types.py  utils.py
tests/: README.md  __init__.py  test_agent_best_action.py  test_basic.py  test_config_maker.py  test_maximize_1d_robust.py  test_minimum_cost.py
