[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "moralhazard"
version = "0.1.0"
description = "Moral hazard problem solver"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Eduardo Azevedo", email = "eduaze@gmail.com" }]

# --- RUNTIME dependencies only ---
dependencies = [
  "numpy>=1.24.0",
  "pandas>=2.3.3",
  "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/eduardomazevedo/moralhazard"
Issues   = "https://github.com/eduardomazevedo/moralhazard/issues"

# Tell hatch where the code lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/moralhazard"]

# Keep non-runtime stuff out of built artifacts
[tool.hatch.build]
exclude = ["/examples", "/docs", "/tests", "/.github"]

# ----- Dev tooling -----
# Use uv "dependency groups" for dev-only deps (preferred over extras for tools)
[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "jupyter>=1.0.0",
  "matplotlib>=3.7.0",
  # optional niceties:
  # "ruff>=0.5.0",
  # "mypy>=1.8.0",
  # "black>=24.3.0",
]

# Pytest config (works whether or not you install pytest via uv group)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
